<resources>
    <string name="app_name">FreeStuff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="image_description">An image of the item</string>
    <string name="btn_pick_up">Pick Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="cathy_yue">Cathy Yue</string>
    <string name="cathyy0061_gmail_com">cathyy0061@gmail.com</string>
    <string name="change_settings">Change Settings</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>

    <string-array name="conditions">
        <item>New</item>
        <item>Like New</item>
        <item>Used</item>
        <item>Refurbished</item>
    </string-array>
</resources>