<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>