<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLSettings"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:layout_below="@+id/ivDesign"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment"
    tools:ignore="UnknownIdInLayout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/profile_template" />

    <LinearLayout
        android:id="@+id/LLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="12"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="12"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="12"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_settings" />

</LinearLayout>
