<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/ivDesign"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_below="@id/ivProfile"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-50dp"
        android:src="@drawable/profile_design" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile_template"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

    <LinearLayout
        android:id="@+id/LLAttributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ivDesign"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/LLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_person"
                android:layout_marginStart="16dp"
                />
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cathy_yue"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LLEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email"
                android:layout_marginStart="16dp"
                />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cathyy0061_gmail_com"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LLAttributes"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_settings" />

    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSettings"
        android:layout_marginStart="16dp"
        android:text="@string/logout" />
</RelativeLayout>